--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekll-theme-minimal
+theme: jekyll-theme-minimal
 title: My Dev AI Blog
-description: Learning in public
+description: Sharing what I learn
